refactor(styles): improve UI components and responsive design
- Refactor CSS variables and typography for better consistency
- Enhance button hover states and animations
- Improve card layouts and spacing
- Optimize responsive design for mobile and desktop
- Clean up unused styles and consolidate selectors

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Eleazar Campo - Head Chef | Pan-Asian Culinary Expert</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
